[package]
name = "v5_bridge"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
vexide = { version = "0.8.0", features = ["full", "default-sdk"] }

